test_suite5/ALAN/test_suite/alan-2022-examples/failing/004830_mutation.alan
source g begin leave V / > K end
